# Launcher

./: .clang-format  .codespell-ignore-words  .cppcheck-suppressions  .gitignore  .markdownlint.yaml  .markdownlintignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Containerfile  README.md  epl_metadata.json  flake.nix  qt-deps.txt  renovate.json  rustfmt.toml  treefmt.nix
.changelog/: v111.0.3.md  v111.0.4.md
.github/: dependabot.yml  pull_request_template.md
buildconfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
cmake/: MacOSXBundleInfo.plist.in  ParseLauncherConfig.cmake
core/: Cargo.toml  launcher_core.h  roadmap.md
core/src/: error.rs  ffi.rs  filesystem.rs  gzip.rs  hashing.rs  json.rs  lib.rs  string_utils.rs
crates/: CMakeLists.txt  Cargo.toml  launcher_core.h
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: lib.rs
crates/gzip/: Cargo.toml
crates/gzip/src/: lib.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: lib.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: lib.rs
crates/json/: Cargo.toml
crates/json/src/: lib.rs
crates/launcher_archive/: Cargo.toml
crates/launcher_archive/src/: lib.rs
crates/launcher_core/: Cargo.toml
crates/launcher_core/src/: lib.rs
crates/launcher_error/: Cargo.toml
crates/launcher_filesystem/: Cargo.toml
crates/launcher_filesystem/src/: lib.rs
crates/launcher_gzip/: Cargo.toml
crates/launcher_gzip/src/: lib.rs
crates/launcher_hashing/: Cargo.toml
crates/launcher_hashing/src/: lib.rs
crates/launcher_json/: Cargo.toml
crates/launcher_json/src/: lib.rs
crates/launcher_markdown/: Cargo.toml
crates/launcher_markdown/src/: lib.rs
crates/launcher_string_utils/: Cargo.toml
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs
crates/mod_metadata/: Cargo.toml
crates/mod_metadata/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/src/: archive.rs  json.rs  lib.rs  markdown.rs
crates/string_utils/: Cargo.toml
crates/string_utils/src/: lib.rs
docs/: v111.0.2-tasks.md
flatpak/: com.cleanlauncher.Launcher.yml  io.github.elyprismlauncher.ElyPrismLauncher.yml  io.github.launcher.Launcher.yml  org.prismlauncher.PrismLauncher.yml
launcher/: Application.cpp  Application.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  Commandline.h  DataMigrationTask.cpp  DataMigrationTask.h  DesktopServices.cpp  DesktopServices.h  FastFileIconProvider.cpp  FileIgnoreProxy.cpp  FileSystem.cpp  FileSystem.h  Filter.h  GZip.cpp  GZip.h  HardwareInfo.cpp  HardwareInfo.h  InstanceCopyPrefs.cpp  InstanceCopyPrefs.h  InstanceCopyTask.cpp  InstanceCopyTask.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceDirUpdate.cpp  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstanceTask.h  JavaCommon.cpp  JavaCommon.h  Json.cpp  Json.h  LaunchController.cpp  LaunchController.h  (+28 more)
libraries/: README.md
libraries/launcher/: CMakeLists.txt
libraries/launcher/legacy/net/minecraft/: Launcher.java
libraries/launcher/legacy/org/cleanlauncher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/org/cleanlauncher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/org/cleanlauncher/legacy/utils/: Base64.java
libraries/launcher/legacy/org/cleanlauncher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/org/cleanlauncher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/org/cleanlauncher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/legacy/org/launcher/legacy/: LegacyLauncher.java
libraries/launcher/legacy/org/launcher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/org/launcher/legacy/utils/: Base64.java
libraries/launcher/legacy/org/launcher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/org/launcher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/org/launcher/legacy/utils/url/: UrlUtils.java
libraries/launcher/org/cleanlauncher/: EntryPoint.java  SystemProperties.java
libraries/launcher/org/cleanlauncher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/cleanlauncher/launcher/: Launcher.java
libraries/launcher/org/cleanlauncher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/org/cleanlauncher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/org/cleanlauncher/utils/logging/: Level.java  Log.java
libraries/launcher/org/launcher/: EntryPoint.java  SystemProperties.java
libraries/launcher/org/launcher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/launcher/launcher/: Launcher.java
libraries/launcher/org/launcher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/org/launcher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/org/launcher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/org/launcher/legacy/utils/: Base64.java
libraries/launcher/org/launcher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/org/launcher/legacy/utils/json/: JsonParser.java
libraries/launcher/org/launcher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/org/launcher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/org/launcher/utils/logging/: Level.java  Log.java
licenses/: Apache-2.0  BSD-3-Clause  Batch-Icons  BreezeIcons  CleanLauncher  Gamemode  MIT  MaterialDesignIcons  MinGW-w64  Qt6  (+15 more)
(+1381 files in other folders)
