[package]
name = "launcher-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Memory-safe core for Prism Launcher"

[lib]
name = "launcher_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flate2 = "1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
digest = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
