[workspace]
resolver = "2"
members = [
    "launcher_error",
    "launcher_archive",
    "launcher_filesystem",
    "launcher_gzip",
    "launcher_hashing",
    "launcher_json",
    "launcher_markdown",
    "launcher_string_utils",
    "launcher_core"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
