[package]
name = "http_client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
error = { path = "../error" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
log = "0.4"
